--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,11 @@
         }
 
         @media (max-width: 1491px) {
+
+            .navbar-nav button {
+                width: 20% !important;
+            }
+
             .navbar-collapse {
                 background-color: white;
                 padding: 1.5rem !important
