--- a/info4.html
+++ b/info4.html
@@ -43,6 +43,11 @@
         }
 
         @media (max-width: 991px) {
+
+            .navbar-nav button {
+                width: 20% !important;
+            }
+
             .navbar-collapse {
                 background-color: white;
             }
