--- a/404.html
+++ b/404.html
@@ -50,6 +50,11 @@
             color: #497bb4;
         }
         @media (max-width: 991px) {
+
+            .navbar-nav button {
+                width: 20% !important;
+            }
+
             .navbar-collapse {
                 background-color: white;
             }
