--- a/team.html
+++ b/team.html
@@ -41,32 +41,12 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 
+    <link href="css/test.css" rel="stylesheet">
+    
+    <script src="js/test.js"></script>
 
-    <style>
-        .dropdown-item {
-            transition: 0.9s;
-        }
 
-        .dropdown-item:hover {
-            color: #497bb4;
-        }
-
-        @media (max-width: 1491px) {
-
-            .navbar-nav button {
-                width: 20% !important;
-            }
-
-            .navbar-collapse {
-                background-color: white;
-                padding: 1.5rem !important
-            }
-
-            .col-lg-8 .text-white {
-                font-size: 60px;
-            }
-        }
-    </style>
+    
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
