--- a/academy-kazakhstan.html
+++ b/academy-kazakhstan.html
@@ -33,92 +33,15 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 
+    <link href="css/test.css" rel="stylesheet">
 
-    <style>
-        .dropdown-item {
-            transition: 0.9s;
-        }
+    <script src="js/test.js"></script>
 
-        .dropdown-item:hover {
-            color: #497bb4;
-        }
 
-        @media (max-width: 1491px) {
-
-            .navbar-nav button {
-                width: 20% !important;
-            }
-
-            .navbar-collapse {
-                background-color: white;
-                padding: 1.5rem !important
-            }
-
-            .col-lg-8 .text-white {
-                font-size: 60px;
-            }
-        }
-
-        /* #kazakhstan-section.active {
-            background-color: #267a8c; 
-        }
-
-        #kazakhstan-section.active .elementor-heading-title {
-            color: #fff; 
-        } */
-
-        /* #kyrgyzstan-section.active {
-            background-color: #267a8c;
-        }
-
-        #kyrgyzstan-section.active .elementor-heading-title {
-            color: #fff;
-        } */
-
-        /* body {
-            font-family: Arial, sans-serif;
-        } */
-
-        .elementor-widget-wrap {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .elementor-section {
-            padding: 20px;
-            border: 1px solid #ccc;
-            /* Добавлено: рамка для видимого блока */
-            border-radius: 5px;
-            /* Добавлено: скругление углов */
-            transition: background-color 0.3s;
-            /* Добавлено: плавное изменение фона */
-        }
-
-        .elementor-section:hover {
-            background-color: #f0f0f0;
-            color: #267a8c
-                /* Добавлено: серый фон при наведении */
-        }
-
-        .elementor-widget-heading {
-            margin-bottom: 20px;
-        }
-
-        .elementor-heading-title {
-            font-size: 18px;
-            color: #333;
-            text-decoration: none;
-        }
-
-        /* .elementor-heading-title:hover {
-            color: #267a8c;
-            text-decoration: underline;
-        } */
-    </style>
+    
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
@@ -127,10 +50,10 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/parallax/parallax.min.js"></script>
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
+    <script src="lib/lightbox/js/lightbox.min.js"></script> -->
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
 
 </head>
 
@@ -399,49 +322,7 @@
         </div>
     </div>
 
-    <script>
-        const nameInput = document.getElementById("name");
-        const nameError = document.getElementById("nameError");
-
-        const emailInput = document.getElementById("email");
-        const emailError = document.getElementById("emailError");
-        const subscribeButton = document.getElementById("subscribeButton");
-
-        function validateName(name) {
-            const ren = /^[^\s]/;
-            return ren.test(name);
-        }
-
-        function validateEmail(email) {
-            const re = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-            return re.test(email);
-        }
-
-        subscribeButton.addEventListener("click", (event) => {
-            event.preventDefault();
-
-            if (validateName(nameInput.value)) {
-                nameInput.classList.remove("is-invalid");
-                nameError.style.display = "none"
-                console.log("name nice");
-            } else {
-                nameInput.classList.add("is-invalid");
-                nameError.style.display = "block";
-                name.style.display = "block";
-            }
-
-            if (validateEmail(emailInput.value)) {
-                emailInput.classList.remove("is-invalid");
-                emailError.style.display = "none";
-                // Здесь можно добавить код для отправки формы, например, через AJAX
-                console.log("Подписка успешна");
-            } else {
-                emailInput.classList.add("is-invalid");
-                emailError.style.display = "emailError";
-                nameError.style.display = "emailError";
-            }
-        });
-    </script>
+    
 
 </body>
 
