--- a/QA.html
+++ b/QA.html
@@ -38,7 +38,6 @@
 
     <link href="css/test.css" rel="stylesheet">
 
-    <script src="js/test.js"></script>
 
     
     
@@ -475,7 +474,7 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Закрыть
                     </button>
-                    <button type="button" class="btn btn-primary" id="subscribeButton">
+                    <button type="button" class="btn btn-primary" id="podpiskaButton">
                         Подписаться
                     </button>
                 </div>
@@ -483,6 +482,8 @@
         </div>
     </div>
 
+    <script src="js/test.js"></script>
+    <script src="js/test1.js"></script>
 </body>
 
 </html>
