--- a/info.html
+++ b/info.html
@@ -34,7 +34,7 @@
 
   <link href="css/test.css" rel="stylesheet">
 
-  <script src="js/test.js"></script>
+
 
 
   <!-- JavaScript Libraries -->
@@ -549,7 +549,7 @@
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
             Закрыть
           </button>
-          <button type="button" class="btn btn-primary" id="subscribeButton">
+          <button type="button" class="btn btn-primary" id="podpiskaButton">
             Подписаться
           </button>
         </div>
@@ -557,7 +557,9 @@
     </div>
   </div>
 
-  
+  <script src="js/test1.js"></script>
+
+
 </body>
 
 </html>
