--- a/scholarship-germany.html
+++ b/scholarship-germany.html
@@ -36,7 +36,7 @@
     <link href="css/test.css" rel="stylesheet">
 
 
-    <script src="js/test.js"></script>
+    
 
 
     <!-- JavaScript Libraries -->
@@ -484,7 +484,7 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Закрыть
                     </button>
-                    <button type="button" class="btn btn-primary" id="subscribeButton">
+                    <button type="button" class="btn btn-primary" id="podpiskaButton">
                         Подписаться
                     </button>
                 </div>
@@ -492,6 +492,7 @@
         </div>
     </div>
 
+    <script src="js/test1.js"></script>
     
 
 </body>
