--- a/team.html
+++ b/team.html
@@ -43,7 +43,6 @@
 
     <link href="css/test.css" rel="stylesheet">
     
-    <script src="js/test.js"></script>
 
 
     
@@ -347,6 +346,9 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <script src="js/test1.js"></script>
+
 </body>
 
 </html>
