--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 
     <link href="css/test.css" rel="stylesheet">
 
-    <script src="js/test.js"></script>
+    
 
 
 
@@ -453,7 +453,7 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Закрыть
                     </button>
-                    <button type="button" class="btn btn-primary" id="subscribeButton">
+                    <button type="button" class="btn btn-primary" id="podpiskaButton">
                         Подписаться
                     </button>
                 </div>
@@ -461,6 +461,7 @@
         </div>
     </div>
 
+    <script src="js/test1.js"></script>
     
 
 </body>
