--- a/books.html
+++ b/books.html
@@ -43,7 +43,7 @@
 
     <link href="css/test.css" rel="stylesheet">
 
-    <script src="js/test.js"></script>
+
 
 
 
@@ -397,7 +397,7 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Закрыть
                     </button>
-                    <button type="button" class="btn btn-primary" id="subscribeButton">
+                    <button type="button" class="btn btn-primary" id="podpiskaButton">
                         Подписаться
                     </button>
                 </div>
@@ -405,6 +405,7 @@
         </div>
     </div>
 
+    <script src="js/test1.js"></script>
 
 
 </body>
