--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     <link href="css/test.css" rel="stylesheet">
 
 
-    <script src="js/test.js"></script>
+    
 
 
 
@@ -326,7 +326,7 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Закрыть
                     </button>
-                    <button type="button" class="btn btn-primary" id="subscribeButton">
+                    <button type="button" class="btn btn-primary" id="podpiskaButton">
                         Подписаться
                     </button>
                 </div>
@@ -334,6 +334,7 @@
         </div>
     </div>
 
+    <script src="js/test1.js"></script>
     
 
 </body>
