--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
     <link href="css/test.css" rel="stylesheet">
 
-    <script src="js/test.js"></script>
 
 
     <!-- Bootstrap CSS -->
@@ -705,13 +704,15 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Закрыть
                     </button>
-                    <button type="button" class="btn btn-primary" id="subscribeButton">
+                    <button type="button" class="btn btn-primary" id="podpiskaButton">
                         Подписаться
                     </button>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="js/test1.js"></script>
 
 
 
