--- a/info2.html
+++ b/info2.html
@@ -34,9 +34,9 @@
 
   <link href="css/test.css" rel="stylesheet">
 
-  <script src="js/test.js"></script>
 
-  
+
+
 
   <!-- JavaScript Libraries -->
   <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -528,7 +528,7 @@
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
             Закрыть
           </button>
-          <button type="button" class="btn btn-primary" id="subscribeButton">
+          <button type="button" class="btn btn-primary" id="podpiskaButton">
             Подписаться
           </button>
         </div>
@@ -536,7 +536,9 @@
     </div>
   </div>
 
-  
+  <script src="js/test1.js"></script>
+
+
 </body>
 
 </html>
