--- a/info3.html
+++ b/info3.html
@@ -34,7 +34,7 @@
 
   <link href="css/test.css" rel="stylesheet">
 
-  <script src="js/test.js"></script>
+
 
 
 
@@ -615,13 +615,15 @@
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
             Закрыть
           </button>
-          <button type="button" class="btn btn-primary" id="subscribeButton">
+          <button type="button" class="btn btn-primary" id="podpiskaButton">
             Подписаться
           </button>
         </div>
       </div>
     </div>
   </div>
+
+  <script src="js/test1.js"></script>
 
 
 </body>
