--- a/project.html
+++ b/project.html
@@ -35,8 +35,6 @@
 
     <link href="css/test.css" rel="stylesheet">
 
-    <script src="js/test.js"></script>
-
 
 
 
@@ -466,7 +464,7 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Закрыть
                     </button>
-                    <button type="button" class="btn btn-primary" id="subscribeButton">
+                    <button type="button" class="btn btn-primary" id="podpiskaButton">
                         Подписаться
                     </button>
                 </div>
@@ -474,6 +472,7 @@
         </div>
     </div>
 
+    <script src="js/test1.js"></script>
     
 
 </body>
