--- a/about.html
+++ b/about.html
@@ -262,10 +262,10 @@
             <div class="row g-4 portfolio-container">
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="./img/Untitled-design-10-1024x1024.jpg" alt="">
+                        <img class="img-fluid" src="./img/about2.jpg" alt="">
                         <div class="">
                             <br>
-                            <h4 class="mb-0">Проектный менеджмент в государственном секторе</h4>
+                            <h4 class="mb-0">Открыт набор на магистерскую программу «УПРАВЛЕНИЕ НЕКОММЕРЧЕСКОЙ ОРГАНИЗАЦИЕЙ»</h4>
                             <br>
                             <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum
                                 reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas
@@ -276,10 +276,10 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="./img/Untitled-design-10-1024x1024.jpg" alt="">
+                        <img class="img-fluid" src="./img/about.jpg" alt="">
                         <div class="">
                             <br>
-                            <h4 class="mb-0">Проектный менеджмент в государственном секторе</h4>
+                            <h4 class="mb-0">Выработка политики. Значение для эффективного развития государства</h4>
                             <br>
                             <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum
                                 reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas
@@ -290,10 +290,10 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="./img/Untitled-design-10-1024x1024.jpg" alt="">
+                        <img class="img-fluid" src="./img/about1.jpg" alt="">
                         <div class="">
                             <br>
-                            <h4 class="mb-0">Проектный менеджмент в государственном секторе</h4>
+                            <h4 class="mb-0">Практика развития Местного управления в КР: что изменилось с мая по октябрь 2022 года?</h4>
                             <br>
                             <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum
                                 reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas
