--- a/QA.html
+++ b/QA.html
@@ -282,8 +282,8 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
-                <p class="fs-5 fw-bold text-primary">Задайте вопрос</p>
-                <h1 class="display-5 mb-5">Ваш вопрос</h1>
+                <!-- <p class="fs-5 fw-bold text-primary">Задайте вопрос</p> -->
+                <h1 class="display-5 mb-5">Задайте вопрос</h1>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -293,7 +293,7 @@
                                 <div class="form-floating">
                                     <input type="text" class="form-control border-0" id="gname"
                                         placeholder="Gurdian Name" />
-                                    <label for="gname" class="form-label">Введите ваше имя</label>
+                                    <label for="gname" class="form-label">Ваше имя</label>
                                     <div class="invalid-feedback" id="gnameError">
                                         Пожалуйста, введите корректное имя.
                                     </div>
@@ -303,7 +303,7 @@
                                 <div class="form-floating">
                                     <input type="email" class="form-control border-0" id="gmail"
                                         placeholder="Gurdian Email" />
-                                    <label for="gmail">Введите эл. адрес</label>
+                                    <label for="gmail">Эл. адрес</label>
                                     <div class="invalid-feedback" id="gmailError">
                                         Пожалуйста, введите корректный email.
                                     </div>
@@ -313,14 +313,14 @@
                                 <div class="form-floating">
                                     <input type="text" class="form-control border-0" id="cname"
                                         placeholder="Child Name" />
-                                    <label for="cname">Введите ваш номер телефона</label>
+                                    <label for="cname">Ваш номер телефона</label>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-floating">
                                     <input type="text" class="form-control border-0" id="cage"
                                         placeholder="Child Age" />
-                                    <label for="cage">Введите тему вопроса</label>
+                                    <label for="cage">Тему вопроса</label>
                                 </div>
                             </div>
                             <div class="col-12">
@@ -328,7 +328,7 @@
                                     <textarea type="text" class="form-control border-0"
                                         placeholder="Leave a message here" id="message"
                                         style="height: 100px"></textarea>
-                                    <label for="message">Введите ваш вопрос</label>
+                                    <label for="message">Ваш вопрос</label>
                                     <div class="invalid-feedback" id="messageError">
                                         Пожалуйста, введите ваш вопрос.
                                     </div>
