--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <h1 style='font-size: 4.5vw;'
+                                    <h1 style='font-size: 4.5vw; padding-bottom: 150px;'
                                         class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда
                                         Ханнса Зайделя в Центральной Азии</h1>
-                                    <a href="baza-znanii.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
+                                    <a href="baza-znanii.html" class="btn btn-primary py-sm-3 px-sm-4" style="margin-bottom: 200px;">Подробнее</a>
                                 </div>
                             </div>
                         </div>
@@ -276,7 +276,7 @@
         <div class="container">
             <div class="row g-5 align-items-end">
                 <div class="col-lg-3 col-md-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="img/about.jpg">
+                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="img/index.jpg">
                 </div>
                 <div class="col-lg-6 col-md-7 wow fadeInUp mb-5" data-wow-delay="0.3s">
                     <!-- <span class="display-1 text-primary mb-0">25</span>
